--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "libwebp/libwebpdemux2": "^1.2.4-0.2+deb12u1",
     "libwebp/libwebpmux3": "^1.2.4-0.2+deb12u1",
     "nghttp2/libnghttp2-14": "^1.52.0-1+deb12u1",
+    "postgresql-15/libpq5": "^15.5-0+deb12u1",
+    "postgresql-15/libpq-dev": "^15.5-0+deb12u1",
 
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
